<resources>
    <string name="app_name">App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_with_your_email_and_mobile_to_register">Sign Up with your Email and Mobile to register</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullName">FullName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b><font color="#00000">Sign In </font></b></string>
    <string name="please_login_with_your_email_and_password_to_continue">Please login with your Email and Password to continue</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b><font color="00000">Sign Up</font></b> </string>
    <string name="welcome">Welcome user</string>
    <string name="utforsk">Utforsk</string>
    <string name="selg">Selg</string>
    <string name="innboks">Innboks</string>
    <string name="profil">Profil</string>
    <string name="header">Header</string>
    <string name="description">description</string>
    <string name="Description">Description</string>
    <string name="title">Title</string>
    <string name="createdat">createdAt</string>
    <string name="logout">Logout</string>
    <string name="product_title">Product Title</string>
    <string name="product_image">product-image</string>
    <string name="product_value">0</string>
    <string name="bid">Bid</string>
    <string name="image_of_the_product">Image of the product</string>
    <string name="price">price</string>
    <string name="productTitle">Product Title</string>
    <string name="productid">productId</string>
    <string name="get_location">Get Location</string>
    <string name="bids">bids</string>
    <string name="sell_chats">sell chats</string>
    <string name="buy_chats">buy chats</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="chats">chats</string>
    <string name="chatactivity">ChatActivity</string>
    <string name="selling">Selling</string>
    <string name="buying">Buying</string>
    <string name="chatInfo" />
    <string name="your_selling_chats">Your selling chats</string>
    <string name="your_buying_chats">Your buying chats</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_sent_message">this is sent message</string>
    <string name="this_is_receive_message">this is receive message</string>
    <string name="Title" />
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="Price">Price</string>
    <string name="sell_it">Sell it!</string>
    <string name="required">Required</string>
    <string name="Explore">Explore</string>
    <string name="Sell">Sell</string>
    <string name="Inbox">Inbox</string>
    <string name="Profile">Profile</string>
    <string name="products_with_bid">Products with bid</string>
    <string name="amount">Amount:</string>
    <string name="bidAmount">0</string>
    <string name="accept_bid">Accept Bid</string>
    <string name="bidTextView">Bids</string>
</resources>