<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:contentDescription="@string/please_login_with_your_email_and_password_to_continue"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        tools:context=".ui.home.profile.ProfileFragment">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="225dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars[11]" />

        <TextView
            android:id="@+id/tvUserFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fullName"
            android:textColor="#616161"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="#616161"
            app:layout_constraintEnd_toEndOf="@+id/tvUserFullName"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="@+id/tvUserFullName"
            app:layout_constraintTop_toBottomOf="@+id/tvUserFullName" />

        <TextView
            android:id="@+id/tvCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/createdat"
            app:layout_constraintEnd_toEndOf="@+id/tvEmail"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="@+id/tvCreatedAt"
            app:layout_constraintStart_toStartOf="@+id/tvCreatedAt"
            app:layout_constraintTop_toBottomOf="@+id/tvCreatedAt" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>