<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".ui.auth.LoginFragment">

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="Sign in"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="Welcome Back"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginInfo"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:textColor="#616161"
        android:text="@string/please_login_with_your_email_and_password_to_continue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeBack"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_styles"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="25dp"
        app:layout_constraintEnd_toEndOf="@+id/etLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/etLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/et_styles"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginInfo" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#616161"
        android:text="@string/don_t_have_an_account_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>