<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:contentDescription="@string/chats"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        tools:context=".ui.home.inbox.chat_system.chats.ChatsFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SellingItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/SellingTv"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/SellingTv"
            app:layout_constraintTop_toBottomOf="@+id/SellingTv"
            tools:listitem="@layout/product_chat_card_view"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/SellingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/your_selling_chats"
            android:textColor="#616161"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/buyingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/your_buying_chats"
            android:textColor="#616161"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SellingItemsRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/buyingItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/buyingTv"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@+id/buyingTv"
            app:layout_constraintTop_toBottomOf="@+id/buyingTv"
            tools:listitem="@layout/product_chat_card_view"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>